--- a/Tensor Flow Example.ipynb
+++ b/Tensor Flow Example.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 93,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 94,
    "metadata": {
     "collapsed": true
    },
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +269,7 @@
        "4             4.32  1.04                          2.93      735  "
       ]
      },
-     "execution_count": 85,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 96,
    "metadata": {
     "scrolled": true
    },
@@ -294,7 +294,7 @@
        "Name: Class, dtype: int64"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 97,
    "metadata": {
     "scrolled": false
    },
@@ -530,7 +530,7 @@
        "max                        4.000000  1680.000000  "
       ]
      },
-     "execution_count": 87,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -543,13 +543,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Seprating Data, and Labels.\n",
-    "Need to do this so when training the model "
+    "### Seprating Data, and Class Labels"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 98,
    "metadata": {
     "collapsed": true
    },
@@ -564,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 99,
    "metadata": {
     "collapsed": true
    },
@@ -577,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 100,
    "metadata": {
     "collapsed": true
    },
@@ -590,19 +589,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Use this to clean data."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Making Training, Testing sets"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 101,
    "metadata": {
     "collapsed": true
    },
@@ -622,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -632,7 +624,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -650,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 103,
    "metadata": {
     "collapsed": true
    },
@@ -671,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -683,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 105,
    "metadata": {
     "collapsed": true
    },
@@ -699,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 106,
    "metadata": {
     "collapsed": true
    },
@@ -714,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 107,
    "metadata": {
     "collapsed": true
    },
@@ -728,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 108,
    "metadata": {
     "collapsed": true
    },
@@ -740,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 109,
    "metadata": {
     "collapsed": true
    },
@@ -754,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 110,
    "metadata": {
     "collapsed": true
    },
@@ -767,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 111,
    "metadata": {
     "collapsed": true
    },
@@ -779,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 112,
    "metadata": {
     "collapsed": true
    },
@@ -801,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 113,
    "metadata": {
     "scrolled": true
    },
@@ -810,23 +802,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Step 0, Minibatch Loss= 13048.0635, Training Accuracy= 0.312\n",
-      "Step 50, Minibatch Loss= 401.4894, Training Accuracy= 0.656\n",
-      "Step 100, Minibatch Loss= 981.7825, Training Accuracy= 0.656\n",
-      "Step 150, Minibatch Loss= 322.7964, Training Accuracy= 0.656\n",
-      "Step 200, Minibatch Loss= 552.7913, Training Accuracy= 0.750\n",
-      "Step 250, Minibatch Loss= 285.8234, Training Accuracy= 0.812\n",
-      "Step 300, Minibatch Loss= 643.8351, Training Accuracy= 0.750\n",
-      "Step 350, Minibatch Loss= 386.4569, Training Accuracy= 0.812\n",
-      "Step 400, Minibatch Loss= 409.3505, Training Accuracy= 0.719\n",
-      "Step 450, Minibatch Loss= 117.8579, Training Accuracy= 0.906\n",
-      "Step 500, Minibatch Loss= 133.2578, Training Accuracy= 0.938\n",
-      "Step 550, Minibatch Loss= 186.7896, Training Accuracy= 0.844\n",
-      "Step 600, Minibatch Loss= 53.2649, Training Accuracy= 0.969\n",
-      "Step 650, Minibatch Loss= 526.4879, Training Accuracy= 0.812\n",
-      "Step 700, Minibatch Loss= 930.0029, Training Accuracy= 0.656\n",
+      "Step 0, Minibatch Loss= 151558.1562, Training Accuracy= 0.312\n",
+      "Step 50, Minibatch Loss= 3594.2949, Training Accuracy= 0.594\n",
+      "Step 100, Minibatch Loss= 2179.0964, Training Accuracy= 0.594\n",
+      "Step 150, Minibatch Loss= 1252.1415, Training Accuracy= 0.594\n",
+      "Step 200, Minibatch Loss= 1480.1545, Training Accuracy= 0.750\n",
+      "Step 250, Minibatch Loss= 1770.2521, Training Accuracy= 0.750\n",
+      "Step 300, Minibatch Loss= 342.7532, Training Accuracy= 0.875\n",
+      "Step 350, Minibatch Loss= 429.5262, Training Accuracy= 0.750\n",
+      "Step 400, Minibatch Loss= 1077.6941, Training Accuracy= 0.656\n",
+      "Step 450, Minibatch Loss= 370.8369, Training Accuracy= 0.875\n",
+      "Step 500, Minibatch Loss= 452.1385, Training Accuracy= 0.875\n",
+      "Step 550, Minibatch Loss= 167.2985, Training Accuracy= 0.875\n",
+      "Step 600, Minibatch Loss= 435.4452, Training Accuracy= 0.844\n",
+      "Step 650, Minibatch Loss= 1377.8956, Training Accuracy= 0.688\n",
+      "Step 700, Minibatch Loss= 16.4252, Training Accuracy= 0.969\n",
       "Training Done.\n",
-      "Testing Accuracy: 0.916667\n"
+      "Testing Accuracy: 0.805556\n"
      ]
     }
    ],
@@ -857,105 +849,105 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# \"Thus a good learner is forever walking the narrow path between blindness and hallucination.\" - Pedro Domingos"
+    "### Use this to clean data."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 115,
    "metadata": {
     "collapsed": true
    },
@@ -969,33 +961,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 118,
    "metadata": {
     "scrolled": false
    },
+   "outputs": [],
+   "source": [
+    "%%capture\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "mms = MinMaxScaler()\n",
+    "mms.fit(data)\n",
+    "data[to_scale] = mms.transform(data.copy())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\HackTheU\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:4: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  after removing the cwd from sys.path.\n",
-      "C:\\Users\\HackTheU\\Anaconda3\\lib\\site-packages\\pandas\\core\\frame.py:2356: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  self.loc._setitem_with_indexer((slice(None), indexer), value)\n",
-      "C:\\Users\\HackTheU\\Anaconda3\\lib\\site-packages\\pandas\\core\\frame.py:2326: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  self._setitem_array(key, value)\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -1140,90 +1123,14 @@
        "4         0.259386  0.455285                      0.608059  0.325963  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from sklearn.preprocessing import MinMaxScaler\n",
-    "mms = MinMaxScaler()\n",
-    "mms.fit(data)\n",
-    "data[to_scale] = mms.transform(data.copy())\n",
     "data.head()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
